added vision , mission

--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
                             data-fontsize="['70','70','70','45']" data-lineheight="['70','70','70','50']"
                             data-width="none" data-height="none" data-type="text" data-responsive_offset="on"
                             data-frames='[{"from":"x:[-105%];z:0;rX:0deg;rY:0deg;rZ:-90deg;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":1000,"split":"chars","splitdelay":0.1,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'>
-                            Transforming lives in  Mathare Valley Slum.
+                            Transforming lives in Mathare Valley Slum.
                         </div>
 
                         <div class="tp-caption NotGeneric-btn tp-resizeme" id="slide-3045-layer-8"
@@ -582,11 +582,11 @@
                         data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9=""
                         data-param10="" data-description="">
                         <!-- MAIN IMAGE -->
-                        <img src="assets/img/lion.jpg" alt="" data-bgposition="center center"
-                            data-kenburns="on" data-duration="7000" data-ease="Linear.easeNone" data-scalestart="100"
-                            data-scaleend="120" data-rotatestart="0" data-rotateend="0" data-offsetstart="0 500"
-                            data-offsetend="0 -500" data-bgparallax="10" class="rev-slidebg" data-no-retina>
-                            <div class="tp-caption NotGeneric-Title tp-resizeme" id="slide-3045-layer-1"
+                        <img src="assets/img/lion.jpg" alt="" data-bgposition="center center" data-kenburns="on"
+                            data-duration="7000" data-ease="Linear.easeNone" data-scalestart="100" data-scaleend="120"
+                            data-rotatestart="0" data-rotateend="0" data-offsetstart="0 500" data-offsetend="0 -500"
+                            data-bgparallax="10" class="rev-slidebg" data-no-retina>
+                        <div class="tp-caption NotGeneric-Title tp-resizeme" id="slide-3045-layer-1"
                             data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
                             data-y="['middle','middle','middle','middle']" data-voffset="['-15','-15','-15','-15']"
                             data-fontsize="['70','70','70','45']" data-lineheight="['70','70','70','50']"
@@ -726,7 +726,7 @@
     <!-- Start Blog Area -->
     <section class="blog-section pt-100 pb-70">
         <div class="container">
-            <div class="section-title" >
+            <div class="section-title">
                 <span>
                     <i class="flaticon-book"></i>
                     FOUNDATIONS' FUNDAMENTAL STATEMENTS
@@ -870,8 +870,52 @@
         </section> -->
     <!-- End Solve Area -->
 
+
+    <!-- Start Process Area -->
+    <section class="process-section center-process pb-30">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="process-item col-lg-4">
+                    <div class="icon">
+                        <i class="flaticon-support"></i>
+                    </div>
+                    <h3>Our Vision</h3>
+                    <p>To give hope to children and vulnerable households from the Masai community,
+                        Makueni County and Mathare slums in Kenya</p>
+                </div>
+
+                <div class="process-item col-lg-4">
+                    <div class="icon">
+                        <i class="flaticon-confirmation"></i>
+                    </div>
+                    <h3>Our Mission</h3>
+                    <p>Passionate about transforming lives by providing education, nurturing talent and
+                        other forms of empowerment and spiritual nourishments to bright and needy
+                        children from the Masai community and Mathare slum dwellers.</p>
+                </div>
+
+                <div class="process-item col-lg-4">
+                    <div class="icon">
+                        <i class="flaticon-enjoy"></i>
+                    </div>
+                    <h3>Our Core Values</h3>
+                    <p>
+                    <ul>
+                        <li>Christianity</li>
+                        <li>Selfless Service</li>
+                        <li>Commitment to the Poor</li>
+                        <li>Problem solving & Transformation</li>
+                    </ul>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Process Area -->
+
+
     <!-- Start Mission Area -->
-    <section class="mission-section">
+    <!-- <section class="mission-section">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-6 p-0">
@@ -886,7 +930,6 @@
                             <i class="flaticon-target"></i>
                             ABOUT US
                         </span>
-                        <!-- <h2>Know About Us</h2> -->
                         <div class="tab mission-list-tab">
                             <ul class="tabs">
                                 <li>
@@ -950,7 +993,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- End Mission Area -->
 
 
