--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
                         </div>
                     </li>
                     <!-- SLIDE  -->
-                    <li data-index="rs-3045" data-transition="zoomout" data-slotamount="default" data-hideafterloop="0"
+                    <li data-index="rs-3046" data-transition="zoomout" data-slotamount="default" data-hideafterloop="0"
                         data-hideslideonmobile="off" data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut"
                         data-masterspeed="2000" data-thumb="assets/img/lion.jpg" data-rotate="0"
                         data-fstransition="fade" data-fsmasterspeed="1500" data-fsslotamount="7"
@@ -586,6 +586,7 @@
                             data-duration="7000" data-ease="Linear.easeNone" data-scalestart="100" data-scaleend="120"
                             data-rotatestart="0" data-rotateend="0" data-offsetstart="0 500" data-offsetend="0 -500"
                             data-bgparallax="10" class="rev-slidebg" data-no-retina>
+                            
                         <div class="tp-caption NotGeneric-Title tp-resizeme" id="slide-3045-layer-1"
                             data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
                             data-y="['middle','middle','middle','middle']" data-voffset="['-15','-15','-15','-15']"
@@ -724,7 +725,20 @@
     <!-- End Donor Area -->
 
 
-      <!-- Start Process Area -->
+   
+
+
+    <!-- Start Blog Area -->
+    <section class="blog-section pt-100 pb-70">
+        <div class="container">
+            <div class="section-title">
+                <span>
+                    <i class="flaticon-book"></i>
+                    FOUNDATIONS' FUNDAMENTAL STATEMENTS
+                </span>
+            </div>
+
+               <!-- Start Process Area -->
       <section class="process-section center-process pb-30">
         <div class="container">
             <div class="row align-items-center">
@@ -752,15 +766,12 @@
     <!-- End Process Area -->
 
 
-    <!-- Start Blog Area -->
-    <section class="blog-section pt-100 pb-70">
-        <div class="container">
-            <div class="section-title">
-                <span>
-                    <i class="flaticon-book"></i>
-                    FOUNDATIONS' FUNDAMENTAL STATEMENTS
-                </span>
-            </div>
+    <div class="section-title" style="margin-left: 65px; margin-top: 5px;" >
+        <span style="font-size: 2opx; color: #B8E6A2;">
+            <i class="flaticon-to-do-list"></i>
+            Our Core Values 
+        </span>
+    </div>
 
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-sm-6">
