fixed founder page

--- a/founder.html
+++ b/founder.html
@@ -385,7 +385,7 @@
                                 a pastor at AIC ZION within the populous and crime infested Mathare slums in Nairobi,
                                 Kenya. Here he came face-to-face to deplorable living conditions for families living in
                                 the second largest slum in Kenya. To take his calling to the homestretch, based on the
-                                earlier resolve, the LION OF JUDAH FOUNDATION whose long term objective is to transform
+                                earlier resolve, the SPRINGS OF HOPE FOR COMMUNITIES (SHOFCOM) whose long term objective is to transform
                                 the lives of the Masai’s and slum families was borne.
                             </p>
                            
