--- a/team.html
+++ b/team.html
@@ -466,8 +466,8 @@
                         </div>
 
                         <div class="content">
-                            <h3>Name Name</h3>
-                            <span>Secretary</span>
+                            <h3>Jeremiah Wambua</h3>
+                            <span>Program Manager</span>
                         </div>
                     </div>
                 </div>
@@ -626,8 +626,8 @@
                         </div>
 
                         <div class="content">
-                            <h3>Name Name</h3>
-                            <span>Secretary</span>
+                            <h3>Jeremiah Wambua</h3>
+                            <span>Program Manager</span>
                         </div>
                     </div>
                 </div>
@@ -794,7 +794,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="team-item">
                         <div class="image">
-                            <img src="assets/img/WhatsApp Image 2024-05-21 at 5.27.21 PM.jpeg" alt="image">
+                            <img src="assets/img/team/1.png" alt="image">
 
                             <ul class="social">
                                 <li>
