--- a/areas.html
+++ b/areas.html
@@ -327,16 +327,16 @@
     <!-- Start Fame Area -->
     <section class="fame-section pt-70 pb-100">
         <div class="container-fluid">
-            <div class="section-title">
+            <div class="section-title" style="margin-left: 30px;">
                 <span>
                     <i class="flaticon-book"></i>
                     EVANGELISM
                 </span>
                 <!-- <h4>Impact to accessing the Word of God</h4> -->
             </div>
-            <div class="row align-items-center">
+            <div class="row">
                 <div class="col-lg-6">
-                    <div class="fame-area-content">
+                    <div class="fame-area-content" style="margin-left: 30px;">
 
                         <h4>Evangelical impact at AIC ZIWANI</h4>
 
@@ -368,7 +368,7 @@
 
 
     <!-- Start About Area -->
-    <section class="about-area pb-100">
+    <section class="about-area pb-100" style="margin-left: 30px;">
         <div class="section-title">
             <span>
                 <i class="flaticon-book"></i>
@@ -418,16 +418,16 @@
     <!-- Start Fame Area -->
     <section class="fame-section pt-70 pb-100">
         <div class="container-fluid">
-            <div class="section-title">
+            <div class="section-title" style="margin-left: 30px;">
                 <span>
                     <i class="flaticon-book"></i>
                     EMPOWERMENT & TRANSFORMATION
                 </span>
                 <!-- <h4>Impacting empowerment to women groups</h4> -->
             </div>
-            <div class="row align-items-center">
+            <div class="row">
                 <div class="col-lg-6">
-                    <div class="fame-area-content">
+                    <div class="fame-area-content" style="margin-left: 30px;">
 
                         <h4>Women Of Faith Group - Mathare</h4>
 
@@ -474,7 +474,7 @@
                         <img src="assets/img/woman1.png" alt="image" style="height: 600px; width: 100%;">
                     </div>
                 </div>
-                <p style="margin-left: 110px;margin-top: 10px;">
+                <p style="margin-left: 30px;margin-top: 10px;">
                     We have plans to work with the Masai women by organizing production and
                     providing
                     marketing services to their precious beads and artifacts internationally and
@@ -488,8 +488,8 @@
 
 
      <!-- Start About Area -->
-     <section class="about-area pb-100">
-        <div class="section-title">
+     <section class="about-area pb-100" style="margin-left: 30px;">
+        <div class="section-title" >
             <span>
                 <i class="flaticon-book"></i>
                 ENVIRONMENT
