fixed the support area

--- a/support_area.html
+++ b/support_area.html
@@ -77,8 +77,8 @@
             <div class="container">
                 <nav class="navbar navbar-expand-md navbar-light">
                     <a class="navbar-brand" href="index.html">
-                        <img src="assets/img/logo.png" class="white-logo" alt="logo" height="100px">
-                            <img src="assets/img/logo.png" class="black-logo" alt="image" height="100px">
+                        <img src="assets/img/logo.png" class="white-logo" alt="logo"  style="margin-bottom: 15px;" height="100px">
+                            <img src="assets/img/logo.png" class="black-logo" alt="image"  style="margin-bottom: 15px;" height="100px">
                     </a>
                     <span style="color: white; margin-left: 80px;">Springs of Hope for Communities (SHOFCOM)</span>
 
@@ -332,8 +332,7 @@
                     <i class="flaticon-to-do-list"></i>
                     SUPPORT
                 </span>
-                <h2>Lend A Helping Hand</h2>
-                <p>At Springs of Hope for Communities (SHOFCOM) , we are open for support in any of the below areas.</p>
+                <p style="margin-left: 30px;">At Springs of Hope for Communities (SHOFCOM) , we are open for support in any of the below areas.</p>
             </div>
 
             <div class="row">
@@ -352,8 +351,8 @@
                         <div class="icon">
                             <img src="assets/img/solve/2.png" alt="image">
                         </div>
-                        <h3>Badgetary Support</h3>
-                        <p>Dobani Kulie dolor sit aonsecteturadipisic smod tempor.</p>
+                        <h3>Budgetary Support</h3>
+                        <p>Find the attached budget 2024 and pick area to support.</p>
                     </div>
                 </div>
 
@@ -459,7 +458,8 @@
                     <div class="row align-items-center">
                         <div class="col-lg-4">
                             <div class="copyright-logo">
-                                <img src="assets/img/white-ogo.png" alt="logo">
+                                <img src="assets/img/logo.png" alt="logo">
+                                <span style="color: white;">Springs of Hope for Communities</span>
                             </div>
                         </div>
 
