--- a/need.html
+++ b/need.html
@@ -65,8 +65,8 @@
                 <div class="huruma-responsive-menu">
                     <div class="logo">
                         <a href="index.html">
-                            <img src="assets/img/logo.png" class="white-logo" alt="logo">
-                                <img src="assets/img/logo.png" class="black-logo" alt="image" >
+                            <img src="assets/img/logo.png" class="white-logo" style="margin-bottom: 15px;" alt="logo">
+                                <img src="assets/img/logo.png" class="black-logo" style="margin-bottom: 15px;" alt="image" >
                         </a>
                     </div>
                 </div>
@@ -77,8 +77,8 @@
             <div class="container">
                 <nav class="navbar navbar-expand-md navbar-light">
                     <a class="navbar-brand" href="index.html">
-                        <img src="assets/img/logo.png" class="white-logo" alt="logo" height="100px">
-                            <img src="assets/img/logo.png" class="black-logo" alt="image" height="100px">
+                        <img src="assets/img/logo.png" class="white-logo" alt="logo" style="margin-bottom: 15px;" height="100px">
+                            <img src="assets/img/logo.png" class="black-logo" alt="image" style="margin-bottom: 15px;" height="100px">
                     </a>
                     <span style="color: white; margin-left: 80px;">Springs of Hope for Communities (SHOFCOM)</span>
 
