--- a/attachment.html
+++ b/attachment.html
@@ -77,8 +77,8 @@
             <div class="container">
                 <nav class="navbar navbar-expand-md navbar-light">
                     <a class="navbar-brand" href="index.html">
-                        <img src="assets/img/logo.png" class="white-logo" alt="logo" height="100px">
-                            <img src="assets/img/logo.png" class="black-logo" alt="image" height="100px">
+                        <img src="assets/img/logo.png" class="white-logo" alt="logo"  style="margin-bottom: 15px;" height="100px">
+                            <img src="assets/img/logo.png" class="black-logo" alt="image"  style="margin-bottom: 15px;" height="100px">
                     </a>
                     <span style="color: white; margin-left: 80px;">Springs of Hope of Communities</span>
 
@@ -312,7 +312,7 @@
             <div class="d-table-cell">
                 <div class="container">
                     <div class="page-title-content">
-                        <h2>How to Donate</h2>
+                        <h2>Key Documents</h2>
                         <!-- <ul>
                             <li><a href="index.html">Home</a></li>
                             <li>How To Donate to Our Organization</li>
@@ -446,7 +446,8 @@
                     <div class="row align-items-center">
                         <div class="col-lg-4">
                             <div class="copyright-logo">
-                                <img src="assets/img/white-logo.png" alt="logo">
+                                <img src="assets/img/logo.png" alt="logo">
+                                <span style="color: white;">Springs of Hope for Communities</span>
                             </div>
                         </div>
 
