fixed attachments pages

--- a/attachment.html
+++ b/attachment.html
@@ -66,7 +66,7 @@
                     <div class="logo">
                         <a href="index.html">
                             <img src="assets/img/logo.png" class="white-logo" alt="logo">
-                                <img src="assets/img/logo.png" class="black-logo" alt="image" >
+                            <img src="assets/img/logo.png" class="black-logo" alt="image">
                         </a>
                     </div>
                 </div>
@@ -77,8 +77,10 @@
             <div class="container">
                 <nav class="navbar navbar-expand-md navbar-light">
                     <a class="navbar-brand" href="index.html">
-                        <img src="assets/img/logo.png" class="white-logo" alt="logo"  style="margin-bottom: 15px;" height="100px">
-                            <img src="assets/img/logo.png" class="black-logo" alt="image"  style="margin-bottom: 15px;" height="100px">
+                        <img src="assets/img/logo.png" class="white-logo" alt="logo" style="margin-bottom: 15px;"
+                            height="100px">
+                        <img src="assets/img/logo.png" class="black-logo" alt="image" style="margin-bottom: 15px;"
+                            height="100px">
                     </a>
                     <span style="color: white; margin-left: 80px;">Springs of Hope of Communities</span>
 
@@ -340,17 +342,32 @@
                     <div class="content">
                         <h3>SHOFCOM Support Documents & Attachments </h3>
                         <p>
-                             Concept Note
+                            <a style="font-size: 20px;" href="assets/documents/SPRINGS OF HOPE CONCEPT NOTE.pdf" download>
+                                Concept Note
+                            </a>
                         </p>
                         <p>
-                            Impact Narratives
+                            <a style="font-size: 20px;" href="assets/documents/SPRINGS OF HOPE IMPACT NARRATIVES.pdf" download>
+                                Impact Narratives
+                              </a>
                         </p>
                         <p>
-                            Newsletter
+                            <a style="font-size: 20px;" href="assets/documents/SPRINGS OF HOPE IMPACT NARRATIVES.pdf" download>
+                                Newsletter
+                              </a>
                         </p>
                         <p>
-                            Audited Reports
+                            <a style="font-size: 20px;" href="assets/documents/SPRINGS OF HOPE IMPACT NARRATIVES.pdf" download>
+                                Audited Reports
+                              </a>
                         </p>
+                    </div>
+                </div>
+
+                <div class="feedback-item">
+                    <div class="content">
+                        <h3>Funding Proposals </h3>
+                     
                     </div>
                 </div>
             </div>
@@ -457,7 +474,8 @@
                                 Copyright @
                                 <script data-cfasync="false"
                                     src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-                                <script>document.write(new Date().getFullYear())</script> Springs of Hope of Communities. All Rights
+                                <script>document.write(new Date().getFullYear())</script> Springs of Hope of
+                                Communities. All Rights
                                 Reserved by
                                 <a href="#" target="_blank">
                                     Springs of Hope of Communities
