fixed the attachments

--- a/attachment.html
+++ b/attachment.html
@@ -352,22 +352,20 @@
                               </a>
                         </p>
                         <p>
-                            <a style="font-size: 20px;" href="assets/documents/SPRINGS OF HOPE IMPACT NARRATIVES.pdf" download>
+                            <a style="font-size: 20px;" href="#" download>
                                 Newsletter
                               </a>
                         </p>
                         <p>
-                            <a style="font-size: 20px;" href="assets/documents/SPRINGS OF HOPE IMPACT NARRATIVES.pdf" download>
+                            <a style="font-size: 20px;" href="#" download>
                                 Audited Reports
                               </a>
                         </p>
-                    </div>
-                </div>
-
-                <div class="feedback-item">
-                    <div class="content">
-                        <h3>Funding Proposals </h3>
-                     
+                        <p>
+                            <a style="font-size: 20px;" href="#" download>
+                                Funding Proposals
+                              </a>
+                        </p>
                     </div>
                 </div>
             </div>
