fixed the contact page

--- a/contact.html
+++ b/contact.html
@@ -64,8 +64,8 @@
                     <div class="huruma-responsive-menu">
                         <div class="logo">
                             <a href="index.html">
-                                <!-- <img src="assets/img/logo.png" class="white-logo" alt="logo">
-                                <img src="assets/img/logo.png" class="black-logo" alt="image" > -->
+                                <img src="assets/img/logo.png" class="white-logo" alt="logo">
+                                <img src="assets/img/logo.png" class="black-logo" alt="image" >
                             </a>
                         </div>
                     </div>
@@ -76,8 +76,8 @@
                 <div class="container">
                     <nav class="navbar navbar-expand-md navbar-light">
                         <a class="navbar-brand" href="index.html">
-                            <img src="assets/img/logo.png" class="white-logo" alt="logo" height="100px">
-                            <img src="assets/img/logo.png" class="black-logo" alt="image" height="100px">
+                            <img src="assets/img/logo.png" class="white-logo" alt="logo" style="margin-bottom: 15px;" height="100px">
+                            <img src="assets/img/logo.png" class="black-logo" alt="image" style="margin-bottom: 15px;" height="100px">
                         </a>
                         <span style="color: white; margin-left: 80px;">Springs of Hope for Communities (SHOFCOM)</span>
 
@@ -354,7 +354,7 @@
                     <div class="col-lg-8">
                         <div class="contact-area">
                             <div class="contact-content">
-                                <h3>Let’s talk!</h3>
+                                <h3>Talk to Us</h3>
                                 <p>Contact us to get, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ainim veniam.</p>
                             </div>
 
@@ -528,7 +528,8 @@
                         <div class="row align-items-center">
                             <div class="col-lg-4">
                                 <div class="copyright-logo">
-                                    <img src="assets/img/white-ogo.png" alt="logo">
+                                    <img src="assets/img/logo.png" alt="logo">
+                                    <span style="color: white;">Springs of Hope for Communities</span>
                                 </div>
                             </div>
 
